# docs/swagger.json
@@ -35,17 +35,11 @@
                     "200": {
                         "description": "Query has been processed",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/main.HttpResult"
                         }
                     },
                     "400": {
                         "description": "Invalid request payload",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "404": {
-                        "description": "Could not find files",
                         "schema": {
                             "type": "string"
                         }
@@ -78,6 +72,17 @@
                 },
                 "table_name": {
                     "type": "string"
+                }
+            }
+        },
+        "main.HttpResult": {
+            "type": "object",
+            "properties": {
+                "result": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 }
             }
         },
